[package]
name = "bluetooth_module"
version = "0.1.0"
edition = "2021"

include = ["oui.csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
btleplug = { version = "0.11.3", features = ["serde"] }
json = "0.12.4"
uuid = { version = "1.6.1", features = ["serde"] }
futures = "0.3.30"
